# orangewire-code

./: .clang-format  CMakeLists.txt  LICENSE
bezier_area/: bezier_area.py
cpp/: CMakeLists.txt
cpp/crc32/: crc32.cpp
flatness/: flatness.py
python/arclen_catenary/: catenary.py
python/arclen_hermite/: figure.py  hermite.py
python/credit_card/: luhn.py
python/family_lines/: fit_family.py
python/filter_synth/: lpmfb.py
python/flatness/: flatness.py
python/lagrange_interp/: lagrange.py
python/lightning_dodge/: autododge.py
python/quad_interp/: quad_interp.py
python/simplicial_homology/: complexes.json  simplicial_homology.py
python/utils/: display_matrix.py
